<resources>
    <string name="app_name">MassConverter</string>
    <string name="carat">Carat</string>
    <string name="gram">Gram</string>
    <string name="kg">Kilogram</string>
    <string name="metric_ton">Metric Ton</string>
    <string name="short_ton">Short Ton</string>
    <string name="pound">Pound</string>
    <string name="ounce">Ounce</string>
    <string name="intro">Введите значение массы</string>
    <string name="name">Калькулятор массы</string>
</resources>
